--- a/OmniPayInventorymanagementAPI/package.json
+++ b/OmniPayInventorymanagementAPI/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+     "mssql": "^11.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
