--- a/.env
+++ b/.env
@@ -1,10 +1,14 @@
-DB_USER=sa
-DB_PASSWORD=P@ssw0rd123
-DB_SERVER=192.168.1.8
-DB_PORT=1433
-DB_INSTANCE=SQLENTERPRISE
-DB_DATABASE=WinePOS
+# DB_USER=sa
+# DB_PASSWORD=P@ssw0rd123
+# DB_SERVER=192.168.1.20
+# DB_PORT=1433
+# DB_INSTANCE=SQLENTERPRISE
+# DB_DATABASE=WinePOS
 
+
+AZURE_SQL_CONNECTION_STRING="Server=tcp:omnipos-sql-server.database.windows.net,1433;Initial Catalog=OmniPOS;Persist Security Info=False;User ID=omnipos;Password=Bik1984att@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
+ 
 
 # DB_USER=SA
 # DB_PASSWORD=YourStrong!Passw0rd
@@ -12,3 +16,4 @@ DB_DATABASE=WinePOS
 # DB_PORT=1433
 # DB_INSTANCE=SQLENTERPRISE
 # DB_DATABASE=WinePOS
+
