--- a/.env
+++ b/.env
@@ -6,9 +6,14 @@
 # DB_DATABASE=WinePOS
 
 
-AZURE_SQL_CONNECTION_STRING="Server=tcp:omnipos-sql-server.database.windows.net,1433;Initial Catalog=OmniPOS;Persist Security Info=False;User ID=omnipos;Password=Bik1984att@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+# AZURE_SQL_CONNECTION_STRING="Server=tcp:omnipos-sql-server.database.windows.net,1433;Initial Catalog=OmniPOS;Persist Security Info=False;User ID=omnipos;Password=Bik1984att@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
- 
+ DB_SERVER=omnipos-sql-server.database.windows.net
+DB_USER=omnipos
+DB_PASSWORD=Bik1984att@
+DB_DATABASE=OmniPOS
+DB_PORT=1433
+
 
 # DB_USER=SA
 # DB_PASSWORD=YourStrong!Passw0rd
